// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de Componentes(PrimeraApp) Muestra <PrimeraApp/> correctamente 1`] = `
<Fragment>
  <h1>
    Hola Mundo
  </h1>
  <h4>
    Mi primera App
  </h4>
  <h5>
    Hola, Soy Goku
  </h5>
  <p>
    Soy un subtitulo
  </p>
</Fragment>
`;

exports[`Pruebas de Componentes(PrimeraApp) Muestra en <PrimeraApp/> el subtitulo  1`] = `
<Fragment>
  <h1>
    Hola Mundo
  </h1>
  <h4>
    Mi primera App
  </h4>
  <p>
    Hola, Soy Goku
  </p>
  <p>
    Soy un subtitulo
  </p>
</Fragment>
`;
